//
//  Enum.swift
//  GithubRepo
//
//  Created by Joyson P S on 03/06/21.
//

import Foundation
public enum AlertOptions:String {
    case yes = "Yes"
    case no = "No"
    case cancel = "Cancel"
    case ok = "Ok"
    case stop = "Stop"
    case edit = "Edit"
    case close = "Close"
}

